--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ cmake_dependent_option(ENABLE_ASSISTANT "Turn on assistant compiling." YES "ENAB
 option(ENABLE_DEBUG_LOGS "Turn on or off debug level logs." NO)
 option(ENABLE_NLS "Build with internationalisation support" YES)
 option(ENABLE_VCARD "Turn on compilation of vcard4 support." YES)
+option(CXX_WRAPPER "Build the C++ wrapper for Liblinphone." ON)
 
 
 macro(apply_compile_flags SOURCE_FILES)
@@ -178,6 +179,10 @@ if (ENABLE_VCARD)
 	else()
 		add_definitions(-DVCARD_ENABLED)
 	endif()
+endif()
+if (CXX_WRAPPER)
+	set(Python_ADDITIONAL_VERSIONS 2)
+	find_package(PythonInterp REQUIRED)
 endif()
 
 if(UNIX AND NOT APPLE)
@@ -324,6 +329,9 @@ if(ENABLE_TOOLS)
 endif()
 if(ENABLE_UNIT_TESTS AND BCTOOLBOX_TESTER_FOUND)
 	add_subdirectory(tester)
+endif()
+if(CXX_WRAPPER)
+	add_subdirectory(wrappers/cpp)
 endif()
 
 
