Move includes to C API into C++ headers

--- a/wrappers/cpp/CMakeLists.txt
+++ b/wrappers/cpp/CMakeLists.txt
@@ -99,6 +99,7 @@ add_custom_command(OUTPUT ${GENERATED_SOURCES}
 )
 
 add_compile_options(-Wall -Werror -Wno-deprecated-declarations -Wextra)
+add_definitions(-DWRAPPER_BUILD)
 
 add_library(linphone++ SHARED ${SOURCES})
 target_link_libraries(linphone++ PRIVATE linphone)
