many fixes:     - add doc on `linphone_core_set_chat_database_path` in core header     - update CMakeLists.txt of cpp wrapper with correct paths

--- a/wrappers/cpp/CMakeLists.txt
+++ b/wrappers/cpp/CMakeLists.txt
@@ -91,7 +91,7 @@ set(HEADERS
 )
 
 add_custom_command(OUTPUT ${GENERATED_SOURCES} ${GENERATED_HEADERS}
-	COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/genheaders.py" "${CMAKE_CURRENT_SOURCE_DIR}/../../work/coreapi/help/doc/xml"
+	COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/genheaders.py" "${PROJECT_BINARY_DIR}/coreapi/help/doc/xml"
 	DEPENDS *.py *.mustache linphone-doc
 )
 
