--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,29 +38,29 @@ include(CMakeDependentOption)
 
 option(ENABLE_SHARED "Build shared library." YES)
 option(ENABLE_STATIC "Build static library." YES)
-option(ENABLE_CONSOLE_UI "Turn on or off compilation of console interface." YES)
+option(ENABLE_CONSOLE_UI "Turn on or off compilation of console interface." NO)
 option(ENABLE_DATE "Use build date in internal version number." NO)
-option(ENABLE_DAEMON "Enable the linphone daemon interface." YES)
-option(ENABLE_DOC "Enable documentation generation with Doxygen." YES)
+option(ENABLE_DAEMON "Enable the linphone daemon interface." NO)
+option(ENABLE_DOC "Enable documentation generation with Doxygen." NO)
 option(ENABLE_JAVADOC "Add a target to generate documentation for Java API" NO)
-option(ENABLE_GTK_UI "Turn on or off compilation of gtk interface." YES)
+option(ENABLE_GTK_UI "Turn on or off compilation of gtk interface." NO)
 option(ENABLE_LDAP "Enable LDAP support." NO)
-option(ENABLE_SQLITE_STORAGE "Turn on compilation sqlite storage, for messages, contacts, history" YES)
-cmake_dependent_option(ENABLE_LIME "Enable Instant Messaging Encryption." YES "ENABLE_SQLITE_STORAGE" NO)
-cmake_dependent_option(ENABLE_NOTIFY "Enable libnotify support." YES "ENABLE_GTK_UI;NOT APPLE" NO)
+option(ENABLE_LIME "Enable Instant Messaging Encryption." NO)
+option(ENABLE_SQLITE_STORAGE "Turn on compilation sqlite storage, for messages, contacts, history" NO)
+cmake_dependent_option(ENABLE_NOTIFY "Enable libnotify support." NO "ENABLE_GTK_UI;NOT APPLE" NO)
 option(ENABLE_RELATIVE_PREFIX "Find resources relatively to the installation directory." NO)
 option(ENABLE_STRICT "Build with strict compile options." YES)
-option(ENABLE_TOOLS "Turn on or off compilation of tools." YES)
+option(ENABLE_TOOLS "Turn on or off compilation of tools." NO)
 option(ENABLE_TUNNEL "Turn on compilation of tunnel support." NO)
-option(ENABLE_TUTORIALS "Enable compilation of tutorials." YES)
-option(ENABLE_UNIT_TESTS "Enable compilation of unit tests." YES)
-option(ENABLE_VIDEO "Build with video support." YES)
-cmake_dependent_option(ENABLE_ASSISTANT "Turn on assistant compiling." YES "ENABLE_GTK_UI" NO)
+option(ENABLE_TUTORIALS "Enable compilation of tutorials." NO)
+option(ENABLE_UNIT_TESTS "Enable compilation of unit tests." NO)
+option(ENABLE_VIDEO "Build with video support." NO)
+cmake_dependent_option(ENABLE_ASSISTANT "Turn on assistant compiling." NO "ENABLE_GTK_UI" NO)
 option(ENABLE_DEBUG_LOGS "Turn on or off debug level logs." NO)
-option(ENABLE_NLS "Build with internationalisation support" YES)
-option(ENABLE_VCARD "Turn on compilation of vcard4 support." YES)
-option(ENABLE_ROOTCA_DOWNLOAD "Download rootca.pem at build time." YES)
-option(ENABLE_CXX_WRAPPER "Build the C++ wrapper for Liblinphone." OFF)
+option(ENABLE_NLS "Build with internationalisation support" NO)
+option(ENABLE_VCARD "Turn on compilation of vcard4 support." NO)
+option(ENABLE_ROOTCA_DOWNLOAD "Download rootca.pem at build time." NO)
+option(CXX_WRAPPER "Build the C++ wrapper for Liblinphone." OFF)
 
 
 set(CMAKE_CXX_STANDARD 11)
